src/index.css
@import url('graphiql/graphiql.css');
@import url('./discovery.css');

.graphiql-container.dzen {
    visibility: hidden;
}
.graphiql-container .editorBar {
    height: 1vh;
}
.graphiql-container .resultWrap {
    overflow: auto;
}
.graphiql-explorer-root > * > * {
    outline: none;
}
.graphiql-container .docExplorerWrap {
    z-index: 20000;
}
.graphiql-container .CodeMirror-lines {
    padding: 10px 0;
}

.graphiql-container .docExplorerResizer {
    width: 9px;
    box-sizing: border-box;
    border: solid transparent;
    border-width: 0 2px;
    background-color: black;
    background-clip: content-box;
    opacity: 0;
}
.graphiql-container .docExplorerResizer:hover,
.graphiql-container .docExplorerResizer:active {
    opacity: .15;
    transition: opacity .2s;
}

.graphiql-container .explorer-wrapper {
    position: relative;
}
.graphiql-container .explorer-wrapper .docExplorerResizer {
    left: auto;
    right: -5px;
}
.graphiql-container .explorer-wrapper .docExplorerWrap {
    width: auto !important;
    min-width: 0 !important;
}

.graphiql-container .execute-button {
    outline: none;
    border-radius: 50%;
}
.graphiql-container .toolbar-button {
    outline: none;
    border: 1px solid rgba(0, 0, 0, .2);
    box-shadow: 0 1px 0 rgb(255, 255, 255, .7), inset 0 1px #fff;
}
.graphiql-container .execute-button:focus,
.graphiql-container .execute-button:active,
.graphiql-container .toolbar-button:focus,
.graphiql-container .toolbar-button:active {
    box-shadow: 0 0 1px 2.5px rgb(0 170 255 / 30%) !important;
}

/*
    Dark mode
*/

.graphiql-container.darkmode {
    color: #ccc;
}

.graphiql-container.darkmode select,
.graphiql-container.darkmode input {
    background-color: rgba(0, 0, 0, .25);
    border-color: rgba(17, 17, 17, 0.5) !important;
    color: #888;
}

.graphiql-container.darkmode .doc-explorer-contents,
.graphiql-container.darkmode .history-contents {
    background-color: #21262B;
    border-top: 1px solid #181A1F;
}

.graphiql-container.darkmode .toolbar-button {
    background: #1c2125 !important;
    box-shadow: none;
    color: #8f97a5 !important;
    border: 1px solid #595f6d;
}
.graphiql-container.darkmode .toolbar-button:focus,
.graphiql-container.darkmode .toolbar-button:active {
    border-color: transparent;
}
.graphiql-container.darkmode .toolbar-button:active {
    opacity: .8;
}

.graphiql-container.darkmode .resultWrap {
    border-left: solid 1px #181a1f;
}

.graphiql-container.darkmode .variable-editor-title {
    background: #21262b;
    border-color: rgba(137, 137, 137, 0.35) !important;
    color: #cacdd3;
}
.graphiql-container.darkmode .variable-editor-title * {
    color: #cacdd3 !important;
}

.graphiql-container.darkmode .topBar,
.graphiql-container.darkmode .doc-explorer-title-bar {
    background: #21262B;
    border-color: #181A1F;
    color: #cacdd3;
}

.graphiql-container.darkmode .docExplorerHide {
    color: #606671;
}
.graphiql-container.darkmode .docExplorerResizer {
    background-color: #eee;
}

.graphiql-container.darkmode .doc-explorer-title,
.graphiql-container.darkmode .history-title,
.graphiql-container.darkmode .doc-explorer-back {
    color: #CACDD3 !important;
}

.graphiql-container.darkmode .doc-explorer {
    background: #21262b;
}

.graphiql-container.darkmode .doc-type-description {
    color: #888;
}

.graphiql-container.darkmode .graphiql-operation-title-bar {
    color: #f57966 !important;
}
.graphiql-container.darkmode .graphiql-operation-title-bar input {
    color: #7ecbd0 !important;
}
.graphiql-container.darkmode .graphiql-explorer-field-view {
    color: #64a1dc !important;
}
.graphiql-container.darkmode .graphiql-explorer-graphql-arguments [data-arg-name] span {
    color: #c888e6 !important;
}

.graphiql-container.darkmode .docExplorerWrap,
.graphiql-container.darkmode .historyPaneWrap {
    box-shadow: 0 0 0 1px rgba(0, 0, 0, .2);
}

.graphiql-container.darkmode .docExplorerShow {
    border-left: none;
}
.graphiql-container.darkmode .docExplorerShow,
.graphiql-container.darkmode .historyShow {
    background: #21262b;
    border-bottom: 1px solid #181A1E;
    color: #CACDD3;
}

.graphiql-container.darkmode .docExplorerShow:before,
.graphiql-container.darkmode .doc-explorer-back:before  {
    border-color: #CACDD3;
}

.graphiql-container.darkmode .search-box {
    border: none;
}
.graphiql-container.darkmode .search-box-icon {
    color: #888;
}
.graphiql-container.darkmode .search-box input {
    background: #1E2127;
    margin-left: 12px;
    margin-right: 8px;
    padding-left: 8px;
}

.graphiql-container.darkmode .search-box .search-box-clear,
.graphiql-container.darkmode .search-box .search-box-clear:hover {
    background: #1d2126;
}

.graphiql-container.darkmode .search-box:before {
    color: #c1c4ca;
    font-size: 21px;
    left: 8px;
}

.graphiql-container.darkmode,
.graphiql-container.darkmode button,
.graphiql-container.darkmode input {
    color: #9299A7;
}

.graphiql-container.darkmode .execute-button {
    background: #21262b;
    border: 1px solid rgb(91, 98, 107);
    box-shadow: none;
    fill: #c9ccd2;
}
.graphiql-container.darkmode .execute-button:focus,
.graphiql-container.darkmode .execute-button:active {
    border-color: transparent;
}
.graphiql-container.darkmode .execute-button:active {
    opacity: .8;
}

.graphiql-container.darkmode .history-contents p {
    border: none;
}

.graphiql-container.darkmode .historyPaneWrap {
    background: #21262b;
}

.graphiql-container.darkmode .execute-options > li.selected,
.graphiql-container.darkmode .toolbar-menu-items > li.hover,
.graphiql-container.darkmode .toolbar-menu-items > li:active,
.graphiql-container.darkmode .toolbar-menu-items > li:hover,
.graphiql-container.darkmode .toolbar-select-options > li.hover,
.graphiql-container.darkmode .toolbar-select-options > li:active,
.graphiql-container.darkmode .toolbar-select-options > li:hover,
.graphiql-container.darkmode .history-contents > p:hover,
.graphiql-container.darkmode .history-contents > p:active {
    background: #383C41;
}

.graphiql-container.darkmode .doc-category-title {
    border-bottom: 1px solid #333844;
    color: #cacdd3;
}

.graphiql-container.darkmode .field-name {
    color: #9CA3AC;
}

.graphiql-container.darkmode .type-name {
    color: #95be76;
}

.graphiql-container.darkmode .keyword {
    color: #9ea5b0;
}

.graphiql-container.darkmode .arg-name {
    color: #b5875d;
}

.graphiql-container.darkmode .doc-category-item {
    color: #BC6069;
}

.graphiql-container.darkmode a {
    color: #7b9ad4;
}

.graphiql-container.darkmode .CodeMirror {
    background: #282D34 !important;
}
.graphiql-container.darkmode .CodeMirror-gutters {
    border: none !important;
    background-color: #282d33;
}
.graphiql-container.darkmode .result-window .CodeMirror-gutters {
    background: #282D33;
    border: none !important;
}
.graphiql-container.darkmode .CodeMirror-lint-tooltip {
    background: #1a1e22 !important;
    color: red;
}
.graphiql-container.darkmode .CodeMirror-focused .CodeMirror-selected {
    background-color: rgba(0, 170, 255, 0.22);
}
.graphiql-container.darkmode .CodeMirror-selected {
    background-color: rgba(126, 126, 126, 0.3);
}

.graphiql-container.darkmode .CodeMirror-info {
    background: #323232;
    color: #ccc;
    border: 1px solid rgba(176, 176, 176, 0.65);
    box-shadow: 2px 3px 5px rgba(0, 0, 0, .2);
}

.graphiql-container.darkmode .CodeMirror-hints {
    background: #21262a;
    box-shadow: 0 16px 13px -10px rgba(0, 0, 0, 0.3);
}
.graphiql-container.darkmode .CodeMirror-hint {
    border-top: solid 1px #212629;
    color: #8ab16f;
}
.graphiql-container.darkmode .CodeMirror-hint-information {
    border-top: solid 1px #181a1e;
}
.graphiql-container.darkmode li.CodeMirror-hint-active {
    background-color: #262c2f;
    border-top-color: #212629;
    color: #b8ff87;
}
.graphiql-container.darkmode .CodeMirror-hint-information .content {
    color: #a4abb7;
}
.graphiql-container.darkmode .CodeMirror div.CodeMirror-cursor {
    border-left: 2px solid #97BE7B;
}
.graphiql-container.darkmode .cm-property {
    color: #A5ACB8;
}
.graphiql-container.darkmode .cm-string {
    color: #97BE7B;
}
.graphiql-container.darkmode .cm-variable,
.graphiql-container.darkmode .cm-attribute {
    color: #c9a98d;
}
.graphiql-container.darkmode .cm-def {
    color: #7ecbd0;
}
.graphiql-container.darkmode .cm-keyword {
    color: #f57966;
}
.graphiql-container.darkmode .cm-punctuation,
.graphiql-container.darkmode .cm-ws {
    color: #999;
}
.graphiql-container.darkmode .cm-atom {
    color: #d27caf;
}

